--- a/src/app/pages/view/view.page.html
+++ b/src/app/pages/view/view.page.html
@@ -12,9 +12,6 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-fab horizontal="end" vertical="bottom" slot="fixed" (click)="openAR()">
-    <ion-fab-button color="primary">
-      <ion-icon name="scan"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
+  <!-- <iframe src="./assets/aframe-ar.html"></iframe> -->
+  <iframe src="./assets/aframe3.html"></iframe>
 </ion-content>
