--- a/src/app/pages/view/view.page.html
+++ b/src/app/pages/view/view.page.html
@@ -13,5 +13,6 @@
 
 <ion-content [fullscreen]="true">
   <!-- <iframe src="./assets/aframe-ar.html"></iframe> -->
-  <iframe src="./assets/aframe6.html"></iframe>
+  <!-- <iframe src="./assets/aframe5.html"></iframe> -->
+  <iframe src="../../../assets/aframe8.html" style="width: 100%; height: 100%; border: none;"></iframe>
 </ion-content>
